@@ -1,4 +1,5 @@
 11/12/10 use a non-linear relationship for showing total charge on dielectric, so that changes are clearly visible with battery voltages
+11/12/10 hide debug nodes when voltmeter is hidden
 # 0.00.40 (46011) Nov 11, 2010
 11/11/10 dev version to demonstrate shape-based voltmeter probes
 11/11/10 move responsibility for debug shape rendering into ShapesDebugNode and out of general nodes, all shape generation can now be in world coordinate frame
